Frontend:( Added: all-notes.component, note model Changed: api-service Deleted: home.component )
Backend:(
Implementation of NoteController
)

Summary: We can see all notes on frontend

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,8 +5,6 @@
 </head>
 <body>
 <div class="container">
-  app-component
-  <br>
-  <app-home></app-home>
+  <app-all-notes></app-all-notes>
 </div>
 </body>
