App doesn't work. There is bug somewhere.

--- a/frontend/src/app/view-note/view-note.component.html
+++ b/frontend/src/app/view-note/view-note.component.html
@@ -36,6 +36,9 @@
                  type="text" [(ngModel)]="description" (ngModelChange)="checkIsDescriptionEmpty()">
         </div>
 
+        <div>
+          <input type="file" id="customFile" (change)="selectFile($event)"><br>
+        </div>
 
         <button class="button" (click)="saveChanges()">Zapisz zmiany</button>
       </div>
