Whole "add new file" functionality works

--- a/frontend/src/app/add-note/add-note.component.html
+++ b/frontend/src/app/add-note/add-note.component.html
@@ -19,6 +19,9 @@
              type="text" [(ngModel)]="description" (ngModelChange)="checkIsDescriptionEmpty()">
     </div>
 
+    <div>
+      <input type="file" id="customFile" (change)="selectFile($event)"><br>
+    </div>
 
     <button class="button" (click)="submit()">Dodaj notatkę</button>
   </div>
