--- a/frontend/src/app/my-notes/my-notes.component.css
+++ b/frontend/src/app/my-notes/my-notes.component.css
@@ -1,7 +1,7 @@
 .all-notes-container{
   align-items: center;
   background-color: #949494;
-  display: flex;
+
   font-size: 20px;
   font-weight: 500;
   justify-content: flex-start;
@@ -18,4 +18,8 @@
 
 .all-notes-container-li{
   padding: 2px;
+}
+
+ul {
+  list-style-type: none;
 }
