--- a/frontend/src/app/my-notes/my-notes.component.html
+++ b/frontend/src/app/my-notes/my-notes.component.html
@@ -2,10 +2,15 @@
   <ul>
     <li *ngFor="let note of notes" class="all-notes-container-li">
       <div class="all-notes-container" (click)="openNote(note.id)">
-        Dodał użytkownik o id: {{note.user}}<br>
+        <div><ul style="overflow-x:hidden; white-space:nowrap; ">
+          Tagi:
+          <li *ngFor="let tag of note.tags" style="display:inline;">#{{tag}} </li>
+        </ul></div>
+        <div>
         Tytuł: {{note.title}}<br>
         Opis: {{note.description}}<br>
         Średnia ocena: {{note.averageRating}}
+        </div>
       </div>
     </li>
   </ul>
